# EasyOCR-trt-cpp

./: CMakeLists.txt  README.md  main.cpp
.dvc/: config
EasyOCR/: CMakeLists.txt  EasyocrTensorRT.cpp  EasyocrTensorRT.h
EasyOCR-python/: requirements.txt  saved_model  to_onnx.py
EasyOCR-python/easyocr/: __init__.py  detection.py  easyocr.py  imgproc.py  recognition.py  utils.py
TrtExec/: CMakeLists.txt  EmoiLogger.h  README.md  Trtexec.cpp  Trtexec.h  VizgardLogger.h  main.cpp
glob/: CMakeLists.txt  README.md  c_glob.cpp  c_glob.h  glob.cpp  glob.h
weights/: .gitignore  craft_mlt_25k.pth.dvc  detectionModel.onnx.dvc  english_g2.pth.dvc  recognitionModel.onnx.dvc
